removed latest tag

--- a/.github/workflows/stl-export.yaml
+++ b/.github/workflows/stl-export.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   export-stl:
-    runs-on: amrit3701/freecad-cli:latest
+    runs-on: amrit3701/freecad-cli
 
     steps:
     - name: Checkout repository
