revert to original version

--- a/.github/workflows/stl-export.yaml
+++ b/.github/workflows/stl-export.yaml
@@ -8,9 +8,7 @@ on:
 jobs:
   export-stl:
     runs-on: ubuntu-latest
-    container:
-      image: amrit3701/freecad-cli
-
+    
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -20,11 +18,11 @@ jobs:
       with:
         python-version: '3.9'
 
-#    - name: Install FreeCAD
-#      run: |
-#        sudo add-apt-repository ppa:freecad-maintainers/freecad-stable -y
-#        sudo apt-get update
-#        sudo apt-get install freecad -y
+    - name: Install FreeCAD
+      run: |
+         sudo add-apt-repository ppa:freecad-maintainers/freecad-stable -y
+         sudo apt-get update
+         sudo apt-get install freecad -y
 
     - name: Run STL export script
       run: |
