added testing firmware and platform.ini

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -1,14 +1,34 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
+[common]
+board_build.partitions = default_16mb.csv
 
-[env:esp32-s3-devkitc-1]
-platform = espressif32
+[env:development]
+platform = platformio/espressif32@5.4.0
 board = esp32-s3-devkitc-1
 framework = arduino
+lib_ldf_mode = deep
+monitor_speed = 115200
+upload_speed = 115200
+build_flags =
+    -DARDUINO_USB_CDC_ON_BOOT=1
+    -DMODFIRMWARE_LOG_LEVEL=MODFIRMWARE_LOG_LEVEL_DEBUG
+
+
+lib_deps = 
+  ModfirmwareBase
+  https://github.com/tzapu/WiFiManager.git
+
+[env:prod]
+platform = platformio/espressif32@5.4.0
+board = esp32-s3-devkitc-1
+framework = arduino
+lib_ldf_mode = deep
+lib_deps = 
+  https://github.com/chof747/modfirmware-base.git
+  https://github.com/chof747/modfirmware-communication.git
+  https://github.com/chof747/modfirmware-controls.git
+  https://github.com/tzapu/WiFiManager.git
+build_flags =
+    -DARDUINO_USB_CDC_ON_BOOT=1
+    -DMODFIRMWARE_LOG_LEVEL=MODFIRMWARE_LOG_LEVEL_WARN
+
+
