--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -6,16 +6,18 @@ platform = platformio/espressif32@5.4.0
 board = esp32-s3-devkitc-1
 framework = arduino
 lib_ldf_mode = deep
-monitor_speed = 115200
-upload_speed = 115200
+monitor_speed = 9600
+upload_speed = 9600
 build_flags =
     -DARDUINO_USB_CDC_ON_BOOT=1
     -DMODFIRMWARE_LOG_LEVEL=MODFIRMWARE_LOG_LEVEL_DEBUG
+    -DDEVELOPMENT
 
 
 lib_deps = 
   ModfirmwareBase
   https://github.com/tzapu/WiFiManager.git
+  https://github.com/adafruit/Adafruit-ST7735-Library.git
 
 [env:prod]
 platform = platformio/espressif32@5.4.0
