Addded start page, control unit and images

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -2,12 +2,14 @@
 board_build.partitions = default_16mb.csv
 
 [env:development]
-platform = platformio/espressif32@5.4.0
+platform = espressif32
+upload_protocol = esp-builtin
+#platform = platformio/espressif32@5.4.0
 board = esp32-s3-devkitc-1
 framework = arduino
 lib_ldf_mode = deep
-monitor_speed = 9600
-upload_speed = 9600
+monitor_speed = 115200
+upload_speed = 460800
 build_flags =
     -DARDUINO_USB_CDC_ON_BOOT=1
     -DMODFIRMWARE_LOG_LEVEL=MODFIRMWARE_LOG_LEVEL_DEBUG
