--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -14,6 +14,7 @@ build_flags =
     -DARDUINO_USB_CDC_ON_BOOT=1
     -DMODFIRMWARE_LOG_LEVEL=MODFIRMWARE_LOG_LEVEL_DEBUG
     -DDEVELOPMENT
+    -DVERSION=\"0.1dev\"
 
 
 lib_deps = 
