--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -10,6 +10,7 @@ framework = arduino
 lib_ldf_mode = deep
 monitor_speed = 115200
 upload_speed = 460800
+debug_speed = 40000 
 build_flags =
     -DARDUINO_USB_CDC_ON_BOOT=1
     -DMODFIRMWARE_LOG_LEVEL=MODFIRMWARE_LOG_LEVEL_DEBUG
